--- a/efi_paper.bib
+++ b/efi_paper.bib
@@ -2861,4 +2861,20 @@ CONCLUSION: These results support the robustness of the concept of frailty as a 
   number = {3}
 }
 
+@Book{therneau00,
+    title = {Modeling Survival Data: Extending the {C}ox Model},
+    author = {{Terry M. Therneau} and {Patricia M. Grambsch}},
+    year = {2000},
+    publisher = {Springer},
+    address = {New York},
+    isbn = {0-387-98784-3},
+}
 
+@Manual{rteam21,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2021},
+    url = {https://www.R-project.org/},
+}
